--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 1,
    "id": "6feae431",
    "metadata": {
     "scrolled": true
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 743,
+   "execution_count": 2,
    "id": "c3feb695",
    "metadata": {
     "scrolled": true
@@ -44,51 +44,50 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_1c5d5_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Schools</th>        <th class=\"col_heading level0 col1\" >Total Students</th>        <th class=\"col_heading level0 col2\" >Total Budget</th>        <th class=\"col_heading level0 col3\" >Average Math Score</th>        <th class=\"col_heading level0 col4\" >Average Reading Score</th>        <th class=\"col_heading level0 col5\" >% Passing Math</th>        <th class=\"col_heading level0 col6\" >% Passing Reading</th>        <th class=\"col_heading level0 col7\" >% Overall Passing</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_f77d0_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Total Schools</th>        <th class=\"col_heading level0 col1\" >Total Students</th>        <th class=\"col_heading level0 col2\" >Total Budget</th>        <th class=\"col_heading level0 col3\" >Average Math Score</th>        <th class=\"col_heading level0 col4\" >Average Reading Score</th>        <th class=\"col_heading level0 col5\" >% Passing Math</th>        <th class=\"col_heading level0 col6\" >% Passing Reading</th>        <th class=\"col_heading level0 col7\" >% Overall Passing</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_1c5d5_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_1c5d5_row0_col0\" class=\"data row0 col0\" >15</td>\n",
-       "                        <td id=\"T_1c5d5_row0_col1\" class=\"data row0 col1\" >39,170</td>\n",
-       "                        <td id=\"T_1c5d5_row0_col2\" class=\"data row0 col2\" >$24,649,428.00</td>\n",
-       "                        <td id=\"T_1c5d5_row0_col3\" class=\"data row0 col3\" >78.985371</td>\n",
-       "                        <td id=\"T_1c5d5_row0_col4\" class=\"data row0 col4\" >81.877840</td>\n",
-       "                        <td id=\"T_1c5d5_row0_col5\" class=\"data row0 col5\" >74.980853</td>\n",
-       "                        <td id=\"T_1c5d5_row0_col6\" class=\"data row0 col6\" >85.805463</td>\n",
-       "                        <td id=\"T_1c5d5_row0_col7\" class=\"data row0 col7\" >65.172326</td>\n",
+       "                        <th id=\"T_f77d0_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_f77d0_row0_col0\" class=\"data row0 col0\" >15</td>\n",
+       "                        <td id=\"T_f77d0_row0_col1\" class=\"data row0 col1\" >39,170</td>\n",
+       "                        <td id=\"T_f77d0_row0_col2\" class=\"data row0 col2\" >$24,649,428.00</td>\n",
+       "                        <td id=\"T_f77d0_row0_col3\" class=\"data row0 col3\" >78.985371</td>\n",
+       "                        <td id=\"T_f77d0_row0_col4\" class=\"data row0 col4\" >81.877840</td>\n",
+       "                        <td id=\"T_f77d0_row0_col5\" class=\"data row0 col5\" >74.980853</td>\n",
+       "                        <td id=\"T_f77d0_row0_col6\" class=\"data row0 col6\" >85.805463</td>\n",
+       "                        <td id=\"T_f77d0_row0_col7\" class=\"data row0 col7\" >65.172326</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x1691365f220>"
+       "<pandas.io.formats.style.Styler at 0x210f3a57e20>"
       ]
      },
-     "execution_count": 743,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#count schools, students and sum budget\n",
-    "school_count = len(school_data_complete[\"school_name\"].unique())\n",
-    "student_count = len(student_data[\"student_name\"])\n",
-    "budget_sum = school_data[\"budget\"].sum()\n",
-    "\n",
-    "#convert strings to numbers\n",
+    "# convert the math and reading scores to numeric \n",
     "school_data_complete[\"math_score\"] = pd.to_numeric(school_data_complete[\"math_score\"])\n",
     "school_data_complete[\"reading_score\"] = pd.to_numeric(school_data_complete[\"reading_score\"])\n",
     "\n",
-    "#calculate averages and total passes\n",
+    "# gather data\n",
+    "school_count = len(school_data_complete[\"school_name\"].unique())\n",
+    "student_count = len(school_data_complete[\"student_name\"])\n",
+    "budget_sum = school_data[\"budget\"].sum()\n",
     "math_avg = school_data_complete[\"math_score\"].mean()\n",
     "reading_avg = school_data_complete[\"reading_score\"].mean()\n",
-    "math_pass = school_data_complete.loc[school_data_complete[\"math_score\"] >= 70]\n",
-    "reading_pass = school_data_complete.loc[school_data_complete[\"reading_score\"] >= 70]\n",
-    "both_pass = school_data_complete.loc[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)]\n",
+    "math_pass = school_data_complete[school_data_complete[\"math_score\"] >= 70]\n",
+    "reading_pass = school_data_complete[school_data_complete[\"reading_score\"] >= 70]\n",
+    "both_pass = school_data_complete[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)]\n",
     "\n",
-    "#get percentages\n",
+    "# calculate percentages\n",
     "math_cent = len(math_pass) / student_count\n",
     "reading_cent = len(reading_pass) / student_count\n",
     "passed_both_cent = len(both_pass) / student_count\n",
     "\n",
+    "# create dataframe\n",
     "district_summary_df = pd.DataFrame(\n",
     "    {\"Total Schools\": [school_count],\n",
     "     \"Total Students\": [student_count],\n",
@@ -98,12 +97,12 @@
     "     \"% Passing Math\":[math_cent * 100],\n",
     "     \"% Passing Reading\":[reading_cent * 100],\n",
     "     \"% Overall Passing\":[passed_both_cent * 100]\n",
-    "     }\n",
+    "    }\n",
     ")\n",
     "\n",
-    "district_summary_sdf = district_summary_df.style.format({\"Total Students\": \"{:,.0f}\",\n",
-    "                                                        \"Total Budget\": \"${:,.2f}\"})\n",
-    "district_summary_sdf"
+    "# format / present \n",
+    "district_summary_df.style.format({\"Total Students\": \"{:,.0f}\",\n",
+    "                                                        \"Total Budget\": \"${:,.2f}\"})"
    ]
   },
   {
@@ -329,64 +328,44 @@
     }
    ],
    "source": [
-    "#take columns we need from overall data and store in new frame\n",
-    "school_sum = school_data_complete[[\"school_name\",\"type\",\"size\",\"budget\",\"math_score\", \"reading_score\", \"Student ID\"]]\n",
-    "school_sum[\"Per Student Budget\"] = school_data_complete[\"budget\"] / school_data_complete[\"size\"]\n",
+    "#attain per student budget\n",
+    "school_data_complete[\"Per Student Budget\"] = school_data_complete[\"budget\"] / school_data_complete[\"size\"]\n",
     "\n",
-    "#value count the number of passing students and place into data frames\n",
-    "mpdf = math_pass[\"school_name\"].value_counts().to_frame().reset_index().rename(columns={\"index\" : \"school_name\", \n",
-    "                                                                                 \"school_name\" : \"math_pass\"})\n",
-    "rpdf = reading_pass[\"school_name\"].value_counts().to_frame().reset_index().rename(columns={\"index\" : \"school_name\", \n",
-    "                                                                                 \"school_name\" : \"reading_pass\"})\n",
-    "bpdf = both_pass[\"school_name\"].value_counts().to_frame().reset_index().rename(columns={\"index\" : \"school_name\", \n",
-    "                                                                                 \"school_name\" : \"both_pass\"})\n",
+    "#group by school\n",
+    "group_school = school_data_complete.set_index(\"school_name\").groupby(\"school_name\")\n",
+    "types = school_data.set_index(\"school_name\")[\"type\"]\n",
+    "school_budget = school_data.set_index(\"school_name\")[\"budget\"]\n",
+    "student_budget = school_data.set_index(\"school_name\")[\"budget\"]/school_data.set_index(\"school_name\")[\"size\"]\n",
     "\n",
-    "#left join these dataframes together\n",
-    "merge_df = pd.merge(school_sum, mpdf, on=\"school_name\", how=\"left\")\n",
-    "merge_df[\"math_pass\"] = (merge_df[\"math_pass\"] / merge_df[\"size\"]) * 100\n",
+    "students_per_school = group_school[\"Student ID\"].count()\n",
     "\n",
-    "merge_df = pd.merge(merge_df, rpdf, on=\"school_name\", how=\"left\")\n",
-    "merge_df[\"reading_pass\"] = (merge_df[\"reading_pass\"] / merge_df[\"size\"]) * 100\n",
+    "#get averages\n",
+    "math_avg = group_school[\"math_score\"].mean()\n",
+    "reading_avg = group_school[\"reading_score\"].mean()\n",
+    "math_cent = (school_data_complete[school_data_complete[\"math_score\"] >= 70].groupby(\"school_name\")[\"Student ID\"].count()/students_per_school) * 100\n",
+    "reading_cent = (school_data_complete[school_data_complete[\"reading_score\"] >= 70].groupby(\"school_name\")[\"Student ID\"].count()/students_per_school) * 100\n",
+    "both_cent = (school_data_complete[(school_data_complete[\"math_score\"] >= 70) & (school_data_complete[\"reading_score\"] >= 70)].groupby(\"school_name\")[\"Student ID\"].count()/students_per_school) * 100\n",
     "\n",
-    "merge_df = pd.merge(merge_df, bpdf, on=\"school_name\", how=\"left\")\n",
-    "merge_df[\"both_pass\"] = (merge_df[\"both_pass\"] / merge_df[\"size\"]) * 100\n",
-    "\n",
-    "#groupby to calculate the average math and reading scores, merge this into the table\n",
-    "x_group = merge_df.groupby([\"school_name\"]).agg({\"math_score\": \"mean\", \"reading_score\": \"mean\"})\n",
-    "x_group = x_group.reset_index().rename(columns={\"math_score\":\"Average Math Score\",\"reading_score\":\"Average Reading Score\"})\n",
-    "groupmerge = pd.merge(merge_df,x_group, on=\"school_name\", how=\"left\").drop(columns=[\"math_score\",\"reading_score\"])\n",
-    "\n",
-    "#move the schools into the index to match example, sort alphabetically\n",
-    "cleaned_ssdf.index.name = None\n",
-    "cleaned_ssdf = cleaned_ssdf.sort_index()\n",
-    "duprem_cleaned_ssdf = groupmerge.drop_duplicates().set_index(\"school_name\")\n",
-    "\n",
-    "#formatting of headers\n",
-    "duprem_cleaned_ssdf.columns = duprem_cleaned_ssdf.columns.astype(\"str\")\n",
-    "duprem_cleaned_ssdf.columns = duprem_cleaned_ssdf.columns.str.title()\n",
-    "duprem_cleaned_ssdf.columns = duprem_cleaned_ssdf.columns.str.replace(\"_\", \" \")\n",
-    "duprem_cleaned_ssdf = cleaned_ssdf.rename(columns={\"Type\":\"School Type\",\n",
-    "                                            \"Size\":\"Total Students\",\n",
-    "                                            \"Budget\":\"Total School Budget\",\n",
-    "                                            \"Math Pass\":\"% Passing Math\",\n",
-    "                                            \"Reading Pass\":\"% Passing Reading\",\n",
-    "                                            \"Both Pass\":\"% Overall Passing\"})\n",
-    "\n",
-    "school_summary_df = cleaned_ssdf[[\"School Type\", \n",
-    "                                 \"Total Students\", \n",
-    "                                 \"Total School Budget\", \n",
-    "                                 \"Per Student Budget\", \n",
-    "                                 \"Average Math Score\", \n",
-    "                                 \"Average Reading Score\", \n",
-    "                                 \"% Passing Math\", \n",
-    "                                 \"% Passing Reading\", \n",
-    "                                 \"% Overall Passing\"]]\n",
+    "school_summary = pd.DataFrame({\n",
+    "    \"School Type\": types,\n",
+    "    \"Total Students\": students_per_school,\n",
+    "    \"Total School Budget\": school_budget,\n",
+    "    \"Per Student Budget\": student_budget,\n",
+    "    \"Average Math Score\": math_avg,\n",
+    "    \"Average Reading Score\": reading_avg,\n",
+    "    '% Passing Math': math_cent,\n",
+    "    '% Passing Reading': reading_cent,\n",
+    "    \"Overall Passing Rate\": both_cent\n",
+    "})\n",
     "\n",
     "\n",
-    "school_summary_sdf = school_summary_df.style.format({\"Total School Budget\": \"${:,.2f}\",\n",
-    "                                                        \"Per Student Budget\": \"${:,.2f}\"})\n",
     "\n",
-    "school_summary_sdf"
+    "school_summary.index.name = None\n",
+    "\n",
+    "school_summary.style.format({\"Total School Budget\": \"${:,.2f}\",\n",
+    "                             \"Per Student Budget\": \"${:,.2f}\"\n",
+    "                            }\n",
+    "                           )"
    ]
   },
   {
@@ -1278,7 +1257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1292,7 +1271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
